--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.22.8",
+    "drizzle-kit": "^0.19.1",
     "drizzle-orm": "^0.31.4",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.400.0",
-    "next": "15.1.3",
+    "next": "^15.2.4",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prop-types": "^15.8.1",
@@ -44,4 +45,3 @@
     "trailingComma": "none"
   }
 }
-
